--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Hypertext markup language (HTML): one of the three cornerstone languages of web development.</li>
+          <li>Metadata: information about our webpage that the browser uses to effectively serve it to users.</li>
+          <li>Search engine optimization (SEO): the process of improving the ranking of a website in search engines.</li> 
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>CSS stands for "Cascading Style Sheets" and is often used to add style to a webpage after setting up the structure with HTML.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>GitHub: web-based interface that uses Git which allows multiple people to make separate changes to a program at the same time.</li>
+          <li>Every command using Git must be preceded by "git" in the command line interface.</li>
+          <li>git status: Checks what branch we are currently on.</li>
+          <li>git checkout -b branch-name: Creates a new branch and switches to it.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>JavaScript adds logic to webpages, allowing users to interact with it.</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
